--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "convert": "^4.7.0",
     "css-loader": "^6.7.1",
     "https": "^1.0.0",
+    "js-unit-converter": "1.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.0",
