--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gynie",
-  "homepage": "https://itsXrgon.github.io/gynie",
+  "homepage": "http://ItsXrgon.github.io/Gynie",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
