--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react-dom": "^18.0.6",
     "convert": "^4.7.0",
     "css-loader": "^6.7.1",
+    "firebase": "9.14.0",
     "https": "^1.0.0",
     "js-unit-converter": "1.0.0",
     "react": "^18.2.0",
